# Bin2Hex

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflows/: build.yml
src/: main.cpp
